@@ -8657,9 +8657,31 @@ operator|.
 name|METASTORESERVERMAXTHREADS
 argument_list|)
 decl_stmt|;
+name|boolean
+name|tcpKeepAlive
+init|=
+name|conf
+operator|.
+name|getBoolVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|METASTORE_TCP_KEEP_ALIVE
+argument_list|)
+decl_stmt|;
 name|TServerTransport
 name|serverTransport
 init|=
+name|tcpKeepAlive
+condition|?
+operator|new
+name|TServerSocketKeepAlive
+argument_list|(
+name|port
+argument_list|)
+else|:
 operator|new
 name|TServerSocket
 argument_list|(
@@ -8772,6 +8794,17 @@ operator|+
 name|options
 operator|.
 name|maxWorkerThreads
+argument_list|)
+expr_stmt|;
+name|HMSHandler
+operator|.
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"TCP keepalive = "
+operator|+
+name|tcpKeepAlive
 argument_list|)
 expr_stmt|;
 name|server
